<resources>
    <string name="app_name">Recruitment App</string>
    <string name="empty_field_error">This field cannot be empty! Enter a value, please!</string>
    <string name="enter_the_employee_name">Enter the employee job</string>
    <string name="enter_the_salary_for_employee">Enter the salary</string>
    <string name="enter_the_no_of_employee">No. of employees</string>
    <string name="enter_the_company_name">Company name</string>
    <string name="enter_the_company_phone_number">phone number</string>
    <string name="save">SAVE</string>
    <string name="cannot_be_empty">field cannot be empty!</string>
    <string name="added_msg">Job successfully added!</string>
    <string name="row_id">saved with row id:</string>
    <string name="add_new_employee">Add new Job</string>
    <string name="edit_employee">Edit the selected Employee</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">Call</string>
    <string name="empty_database_image">Empty database image</string>
    <string name="the_database_is_empty">DB is empty</string>
    <string name="please_add_a_new_entry">Please add a new query!</string>
    <string name="job">Job: </string>
    <string name="salary">Salary: </string>
    <string name="no_of_empl">Number: </string>
    <string name="hire">Hire</string>
    <string name="nothing_was_changed">No fields were modified</string>
    <string name="save_error">Error with saving the employee</string>
    <string name="update_error">Error with updating the employee</string>
    <string name="updated_msg">Employee product updated</string>
    <string name="blank" />
    <string name="discard_your_changes_msg">Discard your changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_msg">Delete this entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleting_error_msg">Error with deleting entry</string>
    <string name="device_deleted">Employee deleted</string>
    <string name="company_name">Company name:</string>
    <string name="company_phone">Company phone:</string>
    <string name="delete_all_entries">Delete all entries</string>
</resources>
