<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edit_background"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding16dp">

            <TextView
                style="@style/labelStyle"
                android:text="@string/job" />

            <EditText
                android:id="@+id/employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_employee_name"
                android:inputType="text"
                android:textColor="#fff"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding16dp">

            <TextView
                style="@style/labelStyle"
                android:text="@string/salary" />

            <EditText
                android:id="@+id/employee_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_salary_for_employee"
                android:inputType="numberDecimal"
                android:textColor="#fff"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding16dp">

            <TextView
                style="@style/labelStyle"
                android:text="@string/no_of_empl" />

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <EditText
                android:id="@+id/no_of_employee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_the_no_of_employee"
                android:inputType="number"
                android:textColor="#fff"
                android:textAlignment="center" />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/plus" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding16dp">

            <TextView
                style="@style/labelStyle"
                android:text="@string/company_name" />

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_company_name"
                android:inputType="text"
                android:textColor="#fff"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding16dp">

            <TextView
                style="@style/labelStyle"
                android:text="@string/company_phone" />


            <EditText
                android:id="@+id/company_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_the_company_phone_number"
                android:inputType="phone"
                android:textColor="#fff"
                android:textAlignment="center" />

            <Button
                android:id="@+id/hire_button"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@color/colorLabel"
                android:text="@string/order" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
